--- a/vignettes/my-vignette.html
+++ b/vignettes/my-vignette.html
@@ -10,7 +10,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="author" content="Authors: Norm Matloff, Alex Fu, Ariel Shin" />
+<meta name="author" content="Norm Matloff, Alex Fu, Ariel Shin" />
 
 <meta name="date" content="2017-08-22" />
 
@@ -69,7 +69,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 
 
 <h1 class="title toc-ignore">ShinyImage</h1>
-<h4 class="author"><em>Authors: Norm Matloff, Alex Fu, Ariel Shin</em></h4>
+<h4 class="author"><em>Norm Matloff, Alex Fu, Ariel Shin</em></h4>
 <h4 class="date"><em>2017-08-22</em></h4>
 
 
